# gbln-javascript

./: .gitignore  IMPLEMENTATION_PLAN.md  README.md  package.json  tsconfig.json
rust-wasm/: Cargo.toml
rust-wasm/src/: lib.rs
scripts/: build-wasm.sh
src/: index.js
src/errors/: base.ts
src/types/: value.ts
test/: simple.test.js
